syntax = "proto3";

option go_package = "github.com/logan2k02/ims/shared/protobuf;protobuf";

service ProductsService {
  rpc CreateProduct (CreateProductRequest) returns (Product);
  rpc GetProduct (ProductIdRequest) returns (Product);
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
  rpc DeleteProduct(ProductIdRequest) returns (DeleteProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (Product);
}

message CreateProductRequest {
  string Name = 1;
  string Sku = 2;
  string Description = 3;
  double Price = 4;
  int64 ReorderLevel = 5;
  int64 ReorderQuantity = 6;
  int64 InitialQuantity = 7;
}

message ProductIdRequest {
  int64 Id = 1;
}

message Product {
  int64 Id = 1;
  string Name = 2;
  string Sku = 3;
  string Description = 4;
  double Price = 5;
  string CreatedAt = 6;
  int64 ReorderLevel = 7;
  int64 ReorderQuantity = 8;
  int64 StockQuantity = 9;
}

message ListProductsRequest {
  repeated int64 Ids = 1;
}

message ListProductsResponse {
  repeated Product Products = 1;
}

message DeleteProductResponse {}

message UpdateProductRequest {
  int64 Id = 1;
  string Name = 2;
  string Sku = 3;
  string Description = 4;
  double Price = 5;
  int64 ReorderLevel = 6;
  int64 ReorderQuantity = 7;
}